<resources>
    <string name="app_name">Project2_LakshdeepKaur</string>
    <string name="email_id">Email Id</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
    <string name="product_title">Product Title</string>
    <string name="product_description">Product Description</string>
    <string name="price_10">Price: $10</string>
    <string name="min">-</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="welcome_to_cart">Welcome to Cart</string>
    <string name="dollar_sign">$-</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="total_tax">Total Tax</string>
    <string name="Subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="Discount">discount</string>
    <string name="button">Button</string>
    <string name="checkout">CheckOut</string>
    <string name="check_out">Check Out</string>
    <string name="go_back">Go Back</string>
    <string name="Title">title</string>
    <string name="priceincart">$0</string>
    <string name="Cartplus">+</string>
    <string name="minussub">Minus</string>
    <string name="addition">Add</string>
    <string name="addtocart">+</string>
    <string name="quantity_1">1</string>
    <string name="minusfromcart">-</string>
    <string name="get_started">Get Started</string>
</resources>